moved files around

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>when will jacc be bacc</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="libs/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
-  </head>
-  <body>
-    <div id=display>
-      <script src="process.js"></script>
-      <script src="render.js"></script>
+<head>
+  <link rel="stylesheet" type="text/css" href="launchpage.css">
+  <link href="http://allfont.net/allfont.css?fonts=agency-fb" rel="stylesheet" type="text/css" />
+  <!-- <link rel="stylesheet" href="css/animations.css"> -->
+
+  <script src="js/launchpage.js"></script>
+</head>
+<body>
+  <div class="on">
+  <img src = "images/drive.gif">
+  <div class = "animated fadeIn">
+  <div id = "blueBar">
+    <h1>TEXT & DRIVE</h1>
+    <p>You are texting while driving, a decision that you'll probably regret in a few seconds.
+      Nevertheless, you choose to persevere. How long will you last before you crash?
+    After all, it's only a matter of time.</p>
+    <br>
+    <p>Good luck.</p>
+    <br>
+    <p>You'll need it.</p>
+  </div>
+
+  <div class = "wrapper on">
+    <button id="playBtn">P L A Y</button>
+  </div>
+
+  <div id = "blueBox" class="on">
+    <h2>Instructions</h2>
+    <p>You must type what's on the screen while keeping the car on the road for as long as you can. It will be a very difficult task, but do your best.</p>
+    <br>
+    <h2>Controls</h2>
+    <div class = "imagew">
+      <img src = "images/joystick.png">
+      <p class = "imgText">Use joystick to steer car.</p>
     </div>
-  </body>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class = "imagew">
+      <img src = "images/keyboard.png">
+      <p class = "imgText">Use keyboard to type.</p>
+    </div>
+  </div>
+</div>
+</div>
+
+</body>
 </html>
