--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
   <link href="http://allfont.net/allfont.css?fonts=agency-fb" rel="stylesheet" type="text/css" />
   <!-- <link rel="stylesheet" href="css/animations.css"> -->
 
-  <script src="js/launchpage.js"></script>
 </head>
 <body>
   <div class="on">
@@ -23,7 +22,7 @@
   </div>
 
   <div class = "wrapper on">
-    <button id="playBtn">P L A Y</button>
+    <a href="game.html"><button id="playBtn">P L A Y</button></a>
   </div>
 
   <div id = "blueBox" class="on">
